style.css
/* This file provides base styles for all pages  */
@import './vars.css';


html {
    color: var(--main-black);
    font-family: 'Inter';
    font-size: var(--font3, 14px);
    font-family: 'Inter', sans-serif, Arial;
    background-color: var(--app-background-light);
    overflow-x: hidden;
    scroll-behavior: smooth;
}

* {
    letter-spacing: 0.1px;
}


@media (min-width: 768px) {
    html {
        font-size: 18px;
    }
}

@media (max-width: 768px) {
    p {
        font-size: 16px;
    }
}



header {
    max-width: var(--screen-lrg, 768px);

}

main {
    margin-top: 100px;
    padding: var(--padding5, 24px);
    margin-left: auto;
    margin-right: auto;
    max-width: var(--screen-lrg, 1024px);
}


caption {
    padding: 10px;
    caption-side: bottom;
}


h1 {
    font-size: 3.5rem;
    font-weight: 700;
    margin: 0;
    margin-bottom: 0 !important;
}

h2 {
    font-size: 2rem;
    line-height: 2.3rem;
    margin-bottom: 0 !important;
}

h3 {
    font-size: 1.5rem;
    line-height: 1.5rem;
}

h4 {
    font-size: 1.3rem;
}

p {
    font-size: 16px;
    line-height: 1.4em;
}

a {
    text-decoration: none;
    font-weight: 500;
    transition: color ease-in 0.1s;
    color: var(--text-dark-grey);
}

a:hover {
    color: var(--blue, rgb(27, 27, 183));
}

.button {
    border: none;
    width: fit-content;
    background-color: var(--dark-grey1);
    border-radius: 32px;
    padding: 8px 18px;
    margin: 0;
    font-size: var(--font4);
    letter-spacing: 0.5px;
    transition: all 0.2s ease-in;
    margin: 0;
    max-height: 40px;
    align-items: center;
    display: flex;
}

.button p {
    color: white;
    line-height: 1rem;
    font-weight: 400;
}

.button:hover {
    background-color: var(--blue);
    cursor: pointer;
}

.button:hover a {
    color: white;
}


.arrowLink {
    display: flex;
    flex-direction: row;
    width: fit-content;
    align-items: center;
 }
 
 .arrowLink > p  {
    font-weight: 500;
    font-size: 16px;
    color: black;
    padding-right: 8px;
 }
 
 .arrowLink img  {
    transition: all 0.2s ease-in;
 }
 
 .arrowLink:hover  img  {
    transform: translateX(3px);
 }
 



nav {
    position: fixed;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: var(--app-background-light);
    width: 100vw;
    top: 0;
    left: 0;
    padding: var(--padding3, 12px) 0;
    min-height: 64px;
    z-index: 100;

}

nav svg {
    margin: 0 var(--margin5, 24px);
}


nav a#active {
    color: var(--blue);
}


nav li {
    width: 72px;
    margin: var(--margin3, 12px);
    text-align: center;
    font-size: 18px;

}




.navMenu {
    display: none;
}

.dropDownMenu {
    list-style: none;
    margin-top: 420px;
    transition: opacity 0.2s ease-in;
    opacity: 0;
    position: absolute;
    width: 100%;
    margin-left: -12px; /* bandaid fix */
    height: fit-content;
    background-color: var(--app-background-light);
    display: none;
    box-sizing: border-box;
    padding: 0 var(--padding5, 24px);
    box-shadow: var(--box-shadow-light);
}

.dropDownMenu li {
    box-sizing: border-box;
    margin: 48px 0;
    font-size: 1.2rem;
    width: 100%;
}

/* Hide the default checkbox*/
nav #menuToggle {
    display: none;
}

label[for="menuToggle"] {
    display: block;
    box-sizing: border-box;
    width: 28px;
    height: 28px;
    cursor: pointer;
    margin: 0 var(--margin6);
}


label[for="menuToggle"] div {
    position: relative;
    height: 3px;
    background-color: var(--text-color);
    margin-bottom: 5px;
    transition: 0.3s ease transform, 0.3s ease top, 0.3s ease width,
        0.3s ease right;
    border-radius: 12px;
}



#menuToggle:checked~.dropDownMenu {
    opacity: 1;
    display: block;
}





footer {
    background: var(--dark-grey2);
    margin: 6rem -12px -12px -12px;
    padding: 24px 0 48px 0 ;
}

footer > div:first-child {
    max-width: var(--screen-lrg, 1024px);
    margin: auto;
    display: flex;
    justify-content: space-between;
}

footer h4 {
    color: white;
    font-weight: 500;
}


footer .socialLinks i {
    font-size: 24px;
    color: white;
    margin-right: 1rem;
}


footer .additionalResources {
    padding: 0 !important;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

footer .additionalResources div {
    display: flex;
    flex-direction: column;
    height: fit-content;
}

footer .additionalResources div:first-child {
    margin-right: 4rem;
}

footer .additionalResources div h4 {
    margin: 0 0 1rem 0;
}

footer .additionalResources div a {
    font-size: 16px;
    margin-top: 4px;
}


@media (max-width: 1064px) {
    footer {
        padding: var(--padding6);
    }
    
    footer > div:first-child {
        flex-direction: column;
        justify-content: center;
    }

    footer .socialLinks {
        margin: auto;
        text-align: center;
    }

    footer .additionalResources {
        flex-direction: column;
        text-align: center;
        margin: auto;
    }

    footer .additionalResources div:first-child {
        margin-right: 0;
    }

    footer .additionalResources div {
        margin-top: 3rem;
    }
 
}


@media (min-width: 768px) {
    .navMenu {
        display: flex;
        flex-direction: row;
        list-style: none;
        margin: 0 var(--margin5, 24px);
        max-height: none;
    }


    .dropDownMenu {
        display: none;
    }

    label[for="menuToggle"] {
        display: none;
    }

}

